--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -1,5 +1,18 @@
-
-
+@media (max-width:320px) {
+	nav .logo a {
+		font-size: 100%;
+	}
+}
+hr {
+	width: 100%;
+	height: 20px;
+	background-color:#333;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	border-width: 2px;
+	}
 body {
   font-family: 'Kanit', sans-serif;
 }
@@ -55,9 +68,8 @@ nav .logo {
   float: left;
   margin-left: 30px;
 }
-
 nav .logo a {
-  font-size: 28px;
+  font-size: 100%;
   line-height: 80px;
   text-transform: uppercase;
   color: #fff;
@@ -71,14 +83,14 @@ nav .logo em {
 }
 
 nav {
-  background: rgba(250,250,250,0.2);
+  background: rgba(0, 0, 0, 0.2);
   height: 80px;
   position: fixed;
   width: 100%;
   left: 0;
   top: 0;
   z-index: 300;
-  box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 2px 10px 0px rgba(175, 175, 175, 0.5);
 }
 
 .menu-icon {
